# tmux-command-palette

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  tmux-command-palette.tmux
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/tmux_command_palette/: command.py  fuzzy_select.py  main.py  palette.py  plugin.py
src/tmux_command_palette/data/: descriptions.json
tests/: test_command_palette.py  test_fuzzy_select.py  test_palette.py  test_plugin.py
