[project]
name = "tmux-command-palette"
version = "0.1.1"
description = "A fzf-based command palette for tmux"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libtmux>=0.55.0",
    "pfzy>=0.3.4",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
]

[project.scripts]
tmux-command-palette = "tmux_command_palette.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyinstaller>=6.13.0",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
